fix username overflow

--- a/triton-theme/src/main/webapp/css/custom.css
+++ b/triton-theme/src/main/webapp/css/custom.css
@@ -191,7 +191,7 @@ body {
 							height: 31px;
 							line-height: 26px;
 							text-align: left;
-							overflow-x: hidden;
+							overflow-y: hidden;
 							&:before {
 								content: "Welcome "
 							}
